# python-pytest-starter-pack

./: README.rst  pyproject.toml
