[tool.poetry]
name = "python-poetry-starter-pack"
version = "0.1.0"
description = ""
authors = ["Allan Chang <allan@clchang.net>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
pytest = "^6.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
